[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "google-civic-information-api"
version = "0.1.0"
description = "A python wrapper for Google's Civic Information API"
readme = "README.md"
authors = [{ name = "Matthew Mathur"}]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: BSD 3-Clause "New" or "Revised" License (BSD-3-Clause)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["civic-information-api"]
dependencies = [
    "requests >= 2.1.0",
]
requires-python = ">=3.7"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/k0pak4/google-civic-information-api-py"